manifests/telemetry/base/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: telemetry
spec:
  parentRefs:
    - name: web
      sectionName: telemetry-https
      namespace: gateway
  hostnames:
    - telemetry.$k8s-domain.ictsc.net
  rules:
    - matches:
      - path:
          type: PathPrefix
          value: /prometheus
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
      backendRefs:
        - name: prometheus-operated
          port: 9090
